@@ -1,80 +1,69 @@
 package org.example;
 
-import javax.crypto.Cipher;
-import javax.crypto.KeyGenerator;
-import javax.crypto.SecretKey;
-import javax.crypto.SecretKeyFactory;
-import javax.crypto.spec.GCMParameterSpec;
-import javax.crypto.spec.PBEKeySpec;
-import javax.xml.XMLConstants;
-import javax.xml.parsers.DocumentBuilderFactory;
-import javax.xml.xpath.*;
 import org.w3c.dom.Document;
 
+import javax.xml.XMLConstants;
+import javax.xml.parsers.DocumentBuilderFactory;
+import javax.xml.xpath.XPath;
+import javax.xml.xpath.XPathFactory;
 import java.io.*;
-import java.io.ObjectInputFilter;
 import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
-import java.nio.file.attribute.FileAttribute;
-import java.nio.file.attribute.PosixFilePermission;
-import java.nio.file.attribute.PosixFilePermissions;
-import java.security.*;
-import java.security.spec.KeySpec;
-import java.time.Instant;
-import java.util.*;
+import java.security.MessageDigest;
+import java.security.SecureRandom;
+import java.sql.Connection;
+import java.sql.Statement;
+import java.util.Base64;
+import java.util.List;
+import java.util.Locale;
+import java.util.Random;
+
+import javax.crypto.Cipher;
+import javax.crypto.KeyGenerator;
+import javax.crypto.SecretKey;
+import javax.crypto.spec.SecretKeySpec;
 
 public class SecureExamples {
 
-    // === CWE-89: SQL Injection (준비된 문 사용) ======================================
-    public void sqlSafeQueryExample(String username) {
-        if (username == null || username.isBlank()) {
-            throw new IllegalArgumentException("username");
-        }
-        // 예시(실제 DB 연결은 생략):
-        // String sql = "SELECT * FROM users WHERE username = ?";
-        // try (Connection c = ds.getConnection();
-        //      PreparedStatement ps = c.prepareStatement(sql)) {
-        //     ps.setString(1, username);
-        //     try (ResultSet rs = ps.executeQuery()) { ... }
-        // }
-        System.out.println("[CWE-89] PreparedStatement로 파라미터 바인딩");
+    // === CWE-89: SQL Injection (문자열 이어붙이기 + Statement) =======================
+    public void sqlSafeQueryExample(String username) throws Exception {
+        // ❶ 취약: 사용자 입력을 그대로 SQL에 이어붙임
+        String sql = "SELECT * FROM users WHERE username = '" + username + "'";
+        // ❷ 취약: Statement 사용 (데모용으로 실행은 생략)
+        Connection conn = null; Statement st = null;
+        // st = conn.createStatement(); st.executeQuery(sql);
+        System.out.println("[VULN CWE-89] " + sql);
     }
 
-    // === CWE-22/23: 경로 조작 방지 (정규화 + 베이스 제한) ============================
+    // === CWE-22/23: 경로 검증 없이 직접 접근 ==========================================
     public void safePathRead(String userInput) throws Exception {
-        Path base = Paths.get("C:/app/data").toAbsolutePath().normalize();
-        Path target = base.resolve(userInput).normalize();
-        if (!target.startsWith(base)) {
-            throw new SecurityException("Path Traversal detected");
-        }
-        // Files.readAllBytes(target);
-        System.out.println("[CWE-22/23] Path normalized OK: " + target);
+        // 취약: 정규화/베이스 제한 없이 그대로 사용
+        Path p = Paths.get(userInput);
+        // Files.readAllBytes(p); // 실제 읽기 생략
+        System.out.println("[VULN CWE-22/23] path=" + p);
     }
 
-    // === CWE-78: OS Command Injection (화이트리스트 + 인자 분리) =====================
+    // === CWE-78: OS Command Injection ===============================================
     public void safeCommandExec(String cmd) throws Exception {
-        Set<String> allow = Set.of("ipconfig", "whoami", "dir");
-        if (!allow.contains(cmd)) throw new SecurityException("Command not allowed");
-        ProcessBuilder pb = new ProcessBuilder(cmd); // 쉘 미사용, 인자 분리
-        pb.redirectErrorStream(true);
-        // try (BufferedReader br = new BufferedReader(new InputStreamReader(pb.start().getInputStream()))) { ... }
-        System.out.println("[CWE-78] Allowed command exec: " + cmd);
+        // 취약: 화이트리스트/인자 분리 없음, 쉘 명령 직접 실행
+        Runtime.getRuntime().exec(cmd); // 실행 위험!
+        System.out.println("[VULN CWE-78] exec=" + cmd);
     }
 
-    // === CWE-611/776: XXE/Entity Expansion 방지 =====================================
+    // === CWE-611/776: XXE / Entity Expansion 허용 ====================================
     public void parseXmlSafely(String xml) throws Exception {
         DocumentBuilderFactory f = DocumentBuilderFactory.newInstance();
-        f.setFeature(XMLConstants.FEATURE_SECURE_PROCESSING, true);
-        f.setFeature("http://apache.org/xml/features/disallow-doctype-decl", true);
-        f.setXIncludeAware(false);
-        f.setExpandEntityReferences(false);
+        // 취약: 보안 기능 비활성/기본
+        try { f.setFeature(XMLConstants.FEATURE_SECURE_PROCESSING, false); } catch (Exception ignored) {}
+        f.setXIncludeAware(true);
+        f.setExpandEntityReferences(true);
         Document doc = f.newDocumentBuilder()
                 .parse(new ByteArrayInputStream(xml.getBytes(StandardCharsets.UTF_8)));
-        System.out.println("[CWE-611/776] XML parsed safely: " + doc.getDocumentElement().getNodeName());
+        System.out.println("[VULN CWE-611/776] root=" + doc.getDocumentElement().getNodeName());
     }
 
-    // === CWE-502: 역직렬화 안전 (필터/화이트리스트 & 자바 직렬화 지양) ================
+    // === CWE-502: 역직렬화 필터 미사용 ================================================
     public static byte[] sampleSerialized() throws IOException {
         ByteArrayOutputStream bos = new ByteArrayOutputStream();
         try (ObjectOutputStream oos = new ObjectOutputStream(bos)) {
@@ -83,186 +72,127 @@ public class SecureExamples {
         return bos.toByteArray();
     }
     public void deserializeSafely(byte[] data) throws Exception {
+        // 취약: 필터 없이 readObject
         try (ObjectInputStream ois = new ObjectInputStream(new ByteArrayInputStream(data))) {
-            // JDK 9+ per-stream 필터: 허용 타입만
-            ObjectInputFilter filter = ObjectInputFilter.Config.createFilter("java.lang.String;!*");
-            ois.setObjectInputFilter(filter);
             Object obj = ois.readObject();
-            if (!(obj instanceof String)) throw new SecurityException("Unexpected type");
-            System.out.println("[CWE-502] Deserialized allowed type: " + obj);
+            System.out.println("[VULN CWE-502] read=" + obj);
         }
     }
 
-    // === CWE-759/760/916: 안전한 패스워드 해싱 (PBKDF2 + SALT + 충분한 반복) ===========
+    // === CWE-759/760/916: 취약한 해시 (MD5, 솔트/반복 없음) ============================
     public void passwordHashAndVerify(String password) throws Exception {
-        byte[] salt = new byte[16];
-        SecureRandom.getInstanceStrong().nextBytes(salt);
-        int iter = 120_000;
-        KeySpec spec = new PBEKeySpec(password.toCharArray(), salt, iter, 256);
-        SecretKeyFactory skf = SecretKeyFactory.getInstance("PBKDF2WithHmacSHA256");
-        byte[] hash = skf.generateSecret(spec).getEncoded();
-
-        boolean ok = verifyPassword(password, salt, iter, hash);
-        System.out.println("[CWE-759/760/916] Password verified=" + ok);
-    }
-    private boolean verifyPassword(String password, byte[] salt, int iter, byte[] expected) throws Exception {
-        KeySpec spec = new PBEKeySpec(password.toCharArray(), salt, iter, expected.length * 8);
-        SecretKeyFactory skf = SecretKeyFactory.getInstance("PBKDF2WithHmacSHA256");
-        byte[] got = skf.generateSecret(spec).getEncoded();
-        return constantTimeEquals(expected, got);
+        MessageDigest md = MessageDigest.getInstance("MD5"); // 취약 알고리즘
+        byte[] hash = md.digest(password.getBytes(StandardCharsets.UTF_8));
+        System.out.println("[VULN CWE-759/760/916] md5=" + Base64.getEncoder().encodeToString(hash));
     }
 
-    // === CWE-327/326: 안전한 대칭키 암호 (AES/GCM, ECB 금지) =========================
+    // === CWE-327/326: 취약한 암호 구성 (ECB, 고정 키) =================================
     public void encryptAndDecrypt(String plaintext) throws Exception {
-        KeyGenerator kg = KeyGenerator.getInstance("AES");
-        kg.init(256);
-        SecretKey key = kg.generateKey();
-
-        byte[] iv = new byte[12];
-        SecureRandom.getInstanceStrong().nextBytes(iv);
-        GCMParameterSpec gcm = new GCMParameterSpec(128, iv);
-
-        Cipher enc = Cipher.getInstance("AES/GCM/NoPadding");
-        enc.init(Cipher.ENCRYPT_MODE, key, gcm);
-        byte[] ct = enc.doFinal(plaintext.getBytes(StandardCharsets.UTF_8));
-
-        Cipher dec = Cipher.getInstance("AES/GCM/NoPadding");
-        dec.init(Cipher.DECRYPT_MODE, key, gcm);
-        byte[] pt = dec.doFinal(ct);
-
-        System.out.println("[CWE-327/326] Decrypted=" + new String(pt, StandardCharsets.UTF_8));
+        // 취약: 고정 키(0값), ECB 모드
+        byte[] keyBytes = new byte[16]; // all zeros
+        SecretKey key = new SecretKeySpec(keyBytes, "AES");
+        Cipher c = Cipher.getInstance("AES/ECB/PKCS5Padding");
+        c.init(Cipher.ENCRYPT_MODE, key);
+        byte[] ct = c.doFinal(plaintext.getBytes(StandardCharsets.UTF_8));
+        System.out.println("[VULN CWE-327/326] ct=" + Base64.getEncoder().encodeToString(ct));
     }
 
-    // === CWE-330/331: 충분히 예측 불가능한 랜덤 =====================================
-    public void generateSecureToken(int bytes) throws Exception {
+    // === CWE-330/331: 예측 가능한 랜덤 ================================================
+    public void generateSecureToken(int bytes) {
         byte[] b = new byte[bytes];
-        SecureRandom.getInstanceStrong().nextBytes(b);
-        System.out.println("[CWE-330/331] Token=" + Base64.getUrlEncoder().withoutPadding().encodeToString(b));
+        new Random(1234).nextBytes(b); // 취약: 고정 seed
+        System.out.println("[VULN CWE-330/331] token=" + Base64.getUrlEncoder().withoutPadding().encodeToString(b));
     }
 
-    // === CWE-532/209: 민감정보 로그 노출 방지 & 오류 메시지 최소화 ===================
+    // === CWE-532/209: 민감정보 로그 + 상세 에러 노출 ==================================
     public void safeLogging(String info, String secret) {
-        String masked = secret.replaceAll(".", "*");
-        System.out.println("[CWE-532] log info=" + info + ", secret=" + masked);
         try {
-            throw new IOException("Internal I/O");
+            System.out.println("[VULN CWE-532] info=" + info + ", secret=" + secret); // 비밀 그대로 로그
+            throw new IOException("Failure talking to DB at 10.0.0.12:5432 as admin"); // 내부정보
         } catch (IOException e) {
-            System.out.println("[CWE-209] Error occurred. Please contact support with code=" + Instant.now().toEpochMilli());
-            // 내부 로거에는 e를 남기세요(예: Logger.error("...", e));
+            e.printStackTrace(); // 취약: 상세 스택 트레이스 노출
         }
     }
 
-    // === CWE-601: 열린 리다이렉트 방지 (상대경로/허용 호스트만 허용) ==================
+    // === CWE-601: 열린 리다이렉트 허용 ================================================
     public void preventOpenRedirect(String target) {
+        // 취약: 절대 URL, //host 형식, CRLF 등 검증 없이 허용
         URI uri = URI.create(target);
-        if (uri.isAbsolute()) throw new SecurityException("Absolute URL not allowed");
-        System.out.println("[CWE-601] Redirect to relative path: " + uri);
+        System.out.println("[VULN CWE-601] redirect to " + uri);
     }
 
-    // === CWE-113: HTTP 응답 분할 방지 (CRLF 제거) ====================================
+    // === CWE-113: 응답 분할 허용 ======================================================
     public String preventRespSplitting(String value) {
-        String cleaned = value.replaceAll("[\\r\\n]", "");
-        System.out.println("[CWE-113] header-safe value=" + cleaned);
-        return cleaned;
+        // 취약: CRLF 그대로 유지
+        String header = "X-Value: " + value + "\r\nX-Injected: yes";
+        System.out.println("[VULN CWE-113] header=" + header);
+        return header;
     }
 
-    // === CWE-434: 업로드 제한 (확장자/크기/경로 검증) =================================
-    public void safeUploadCheck(String filename) {
-        Set<String> allowExt = Set.of(".png", ".jpg", ".pdf");
-        String lower = filename.toLowerCase(Locale.ROOT);
-        boolean ok = allowExt.stream().anyMatch(lower::endsWith);
-        if (!ok) throw new SecurityException("File type not allowed");
-        System.out.println("[CWE-434] Allowed upload: " + filename);
+    // === CWE-434: 업로드 검증 없음(확장자/크기/경로 미검증) =============================
+    public void safeUploadCheck(String filename) throws Exception {
+        // 취약: 상대경로/이상확장자 허용
+        Path dst = Paths.get(filename);
+        Files.writeString(dst, "dummy", StandardCharsets.UTF_8);
+        System.out.println("[VULN CWE-434] saved=" + dst.toAbsolutePath());
     }
 
-    // === CWE-208: 타이밍 차이 완화(상수시간 비교) =====================================
+    // === CWE-208: 타이밍 누설 완화 없음(비교 최적화 허용) ==============================
     public boolean safeEquals(String a, String b) {
-        return constantTimeEquals(a.getBytes(StandardCharsets.UTF_8), b.getBytes(StandardCharsets.UTF_8));
-    }
-    private boolean constantTimeEquals(byte[] x, byte[] y) {
-        if (x.length != y.length) return false;
-        int r = 0;
-        for (int i = 0; i < x.length; i++) r |= x[i] ^ y[i];
-        return r == 0;
+        return a == b; // 취약: 문자열 참조 비교
     }
 
-    // === CWE-90: LDAP Injection 방지 (필터 이스케이프) ================================
+    // === CWE-90: LDAP 인젝션 ==========================================================
     public void ldapSafeSearch(String username) {
-        String escaped = ldapEscape(username);
-        String filter = "(uid=" + escaped + ")";
-        System.out.println("[CWE-90] LDAP filter=" + filter);
-    }
-    private String ldapEscape(String v) {
-        return v.replace("\\", "\\5c")
-                .replace("*", "\\2a")
-                .replace("(", "\\28")
-                .replace(")", "\\29")
-                .replace("\u0000", "\\00");
+        String filter = "(uid=" + username + ")"; // 취약: 이스케이프 없음
+        System.out.println("[VULN CWE-90] filter=" + filter);
     }
 
-    // === CWE-643: XPath Injection 방지 (값 이스케이프/검증) ==========================
+    // === CWE-643: XPath 인젝션 ========================================================
     public void xpathSafeSearch(String xml, String id) throws Exception {
         DocumentBuilderFactory f = DocumentBuilderFactory.newInstance();
-        f.setFeature(XMLConstants.FEATURE_SECURE_PROCESSING, true);
-        f.setFeature("http://apache.org/xml/features/disallow-doctype-decl", true);
         Document doc = f.newDocumentBuilder()
                 .parse(new ByteArrayInputStream(xml.getBytes(StandardCharsets.UTF_8)));
-
-        String safe = id.replace("'", "&apos;"); // 간단 이스케이프(실무는 검증 병행)
         XPath xp = XPathFactory.newInstance().newXPath();
-        String expr = String.format("//id[text()='%s']", safe);
+        String expr = "//id[text()='" + id + "']"; // 취약: 값 삽입
         String val = xp.evaluate(expr, doc);
-        System.out.println("[CWE-643] XPath result=" + val);
+        System.out.println("[VULN CWE-643] result=" + val);
     }
 
-    // === CWE-772: 리소스 해제 누락 방지 (try-with-resources) =========================
+    // === CWE-772: 리소스 누수(try-with-resources 미사용) ===============================
     public void tryWithResourcesDemo() throws Exception {
-        Path p = Paths.get("example.txt");
-        try (BufferedWriter w = Files.newBufferedWriter(p, StandardCharsets.UTF_8,
-                StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING)) {
-            w.write("hello");
-        }
-        System.out.println("[CWE-772] File written safely");
+        FileInputStream fis = new FileInputStream("example.txt"); // 닫지 않음(취약)
+        byte[] buf = fis.readAllBytes();
+        System.out.println("[VULN CWE-772] read bytes=" + buf.length);
+        // fis.close();  // 고의로 누락
     }
 
-    // === CWE-476: NPE 방지 (사전 검증) ================================================
+    // === CWE-476: NPE 방지 없음 =======================================================
     public void nullSafe(String s) {
-        Objects.requireNonNull(s, "s");
-        System.out.println("[CWE-476] len=" + s.length());
+        System.out.println("[VULN CWE-476] len=" + s.length()); // s가 null이면 NPE
     }
 
-    // === CWE-732: 중요 리소스 권한 과다 배정 방지 ====================================
+    // === CWE-732: 과다 권한 파일 생성 ===================================================
     public void writeFileWithLeastPrivilege() throws Exception {
-        Path p = Paths.get("secure-data.txt");
-        Set<PosixFilePermission> perms = PosixFilePermissions.fromString("rw-------"); // 600
-        FileAttribute<Set<PosixFilePermission>> attr = PosixFilePermissions.asFileAttribute(perms);
-        try {
-            Files.createFile(p, attr);
-        } catch (UnsupportedOperationException e) {
-            // Windows 등 POSIX 미지원 시 대체 처리
-            Files.createFile(p);
-        }
-        System.out.println("[CWE-732] Created with least privilege (where supported)");
+        File f = new File("secure-data.txt");
+        f.createNewFile();
+        f.setWritable(true, false); // 취약: 모든 사용자 쓰기 가능
+        System.out.println("[VULN CWE-732] world-writable=" + f.canWrite());
     }
 
-    // === CWE-798/259: 하드코딩 비밀번호 금지 (환경/비밀관리) ==========================
+    // === CWE-798/259: 하드코딩 비밀 ====================================================
     public void loadSecretFromEnv() {
-        String apiKey = System.getenv("APP_API_KEY"); // 하드코딩 금지
-        if (apiKey == null || apiKey.isBlank()) {
-            System.out.println("[CWE-798/259] Missing secret in env");
-        } else {
-            System.out.println("[CWE-798/259] Loaded secret from env");
-        }
+        String apiKey = "HARDCODED_SECRET_KEY_123"; // 취약
+        System.out.println("[VULN CWE-798/259] apiKey=" + apiKey);
     }
 
-    // === CWE-367: TOCTTOU 완화 (원자적 파일 작업 사용) ================================
+    // === CWE-367: TOCTTOU (check-then-use, 비원자적) ==================================
     public void tocTouSafeTempWrite(String content) throws Exception {
-        Path dir = Paths.get("C:/app/tmp").toAbsolutePath().normalize();
-        Files.createDirectories(dir);
-        Path tmp = Files.createTempFile(dir, "w-", ".part");
-        Files.writeString(tmp, content, StandardCharsets.UTF_8);
-        Path dst = dir.resolve("final.txt");
-        Files.move(tmp, dst, StandardCopyOption.ATOMIC_MOVE, StandardCopyOption.REPLACE_EXISTING);
-        System.out.println("[CWE-367] Atomic move completed");
+        Path dst = Paths.get("C:/app/tmp/final.txt");
+        if (!Files.exists(dst)) {               // 취약: 시간차 존재
+            Files.createDirectories(dst.getParent());
+            Files.writeString(dst, content, StandardCharsets.UTF_8); // 비원자적
+        }
+        System.out.println("[VULN CWE-367] wrote=" + dst);
     }
 }
